--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Haley Bragg"
-  avatar           : "Haley Bragg Headshot.jpg"
+  avatar           : "Haley%20Bragg%20Headshot.jpg"
   bio              : "Computer Science Student at Christopher Newport University"
   location         : "Newport News, VA"
   employer         :
