--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,7 @@
 # main links links
 main:
-   - title: "About Me"
-    url: /markdown/
-    
+   
   - title: "Resume"
-    url: /cv/
+    url: /Resume/
     
  
