--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    :
-  email            :
+  email            :  "haley dot bragg dot 19 at cnu dot edu"
   researchgate     :  
   uri              :
   bitbucket        :
