--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Haley Bragg / Academic Portfolio"
+title                    : "Haley Bragg Academic Portfolio"
 title_separator          : "-"
 name                     : &name ""
 description              : &description ""
